Update for meeting with Seth

--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -324,6 +324,7 @@ In spatio-temporal statistics, structured spatial and temporal random effects ar
 Spatial random effects are the subject of Chapter \@ref(beyond-borders).
 
 Give equation for a generalised linear mixed model (GLMM) here.
+Describe connection between generalised additive model [GAMs; @wood2017generalized; @hastie1987generalized] and GLMMs.
 
 ### Latent Gaussian model
 
