--- a/references.bib
+++ b/references.bib
@@ -1804,4 +1804,21 @@ doi = {10.1201/9781420072884-c30}
   publisher={Springer}
 }
 
+@book{wood2017generalized,
+  title={Generalized additive models: an introduction with R},
+  author={Wood, Simon N},
+  year={2017},
+  publisher={CRC press}
+}
+
+@article{hastie1987generalized,
+  title={Generalized additive models: some applications},
+  author={Hastie, Trevor and Tibshirani, Robert},
+  journal={Journal of the American Statistical Association},
+  volume={82},
+  number={398},
+  pages={371--386},
+  year={1987},
+  publisher={Taylor \& Francis}
+}
 
