--- a/references.bib
+++ b/references.bib
@@ -1822,3 +1822,15 @@ doi = {10.1201/9781420072884-c30}
   publisher={Taylor \& Francis}
 }
 
+@article{casella1985introduction,
+  title={An introduction to empirical Bayes data analysis},
+  author={Casella, George},
+  journal={The American Statistician},
+  volume={39},
+  number={2},
+  pages={83--87},
+  year={1985},
+  publisher={Taylor \& Francis}
+}
+
+
